# telecatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 89f1764d89c5_.py  943caf599aa8_alter_user_table_for_fastapiusers.py  9c3a81b3ce71_create_non_fastapiusers_models.py  b6e198d33eb5_.py
teledash/: LaBaffa.session  app.py  channel_messages.py  channels.txt  config.py  models.py  schemas.py
teledash/api/: admin.py  channels.py  collections.py  login.py  search.py  telegram_clients.py  user.py
teledash/config/: __init__.py
teledash/data/downloadables/: teledash.db  teledash_online.db
teledash/data/sample/: collection.tsv
teledash/db/: db_setup.py  models.py
teledash/sessions/: LaBaffa.session  db.json
teledash/static/css/: auth.css  channels.css  clients.css  navbar.css  style.css  style.less
teledash/static/js/: auth.js  channels.js  clients.js  main.js  reset_password.js
teledash/templates/: app_login.html  index.html  login_base.html  login_forms.py  reset_password_form.html  user_channels.html  user_clients.html
teledash/templates/explorer/: footer.html  navbar.html
teledash/ui/: channels.py  clients.py  home.py  login.py  tg_login.py
teledash/utils/: admin.py  channel_messages.py  channels.py  login.py  telegram.py  users.py
teledash/utils/db/: channel.py  tg_client.py  user.py
teledash/utils/overrides/: auth.py  auth_backend.py  fastapi_users.py
