[tool.poetry]
name = "teledash"
version = "0.1.0"
description = ""
authors = ["labaffa <dellarovere.lante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
telethon = "^1.28.5"
python-dotenv = "^1.0.0"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
tinydb = "^4.8.0"
pydantic = "^1.10.9"
orjson = "^3.9.2"
pandas = "^2.0.3"
python-dateutil = "^2.8.2"
unidecode = "^1.3.6"
python-multipart = "^0.0.6"
python-decouple = "^3.8"
fastapi-login = "^1.9.1"
email-validator = "^2.0.0.post2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.20"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
