[tool.poetry]
name = "teledash"
version = "0.1.0"
description = ""
authors = ["labaffa <dellarovere.lante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
telethon = "^1.28.5"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
tinydb = "^4.8.0"
orjson = "^3.9.2"
pandas = "^2.0.3"
python-dateutil = "^2.8.2"
unidecode = "^1.3.6"
python-decouple = "^3.8"
fastapi-login = "^1.9.1"
email-validator = "^2.0.0.post2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.20"
aiosqlite = "^0.19.0"
websockets = "^11.0.3"
python-multipart = "^0.0.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
alembic = "^1.13.1"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
fastapi-mail = "^1.4.1"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
async-timeout = "^4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
